--- a/mainpage/cliend management.html
+++ b/mainpage/cliend management.html
@@ -225,7 +225,7 @@
                 </table>
             </div>
             <div class="footer">
-                <button><a href="createcliuent.html" target="_blank" class="createclient"> + Create Client</a></button>
+                <button class="button"><a href="createcliuent.html" target="_blank" class="createclient"> + Create Client</a></button>
             </div>
         </div>
     </div>
